--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -4,23 +4,23 @@ positiveko:
   url: https://github.com/positiveko
   image_url: https://github.com/positiveko.png
 
-Xednicoder:
-  name: Xednicoder
+saengmotmi:
+  name: saengmotmi
   title: Front End Engineer
-  url: https://github.com/Xednicoder
-  image_url: https://github.com/Xednicoder.png
+  url: https://github.com/saengmotmi
+  image_url: https://github.com/saengmotmi.png
 
-gyuseok-dev:
-  name: gyuseok-dev
-  title: Front End Engineer
-  url: https://github.com/gyuseok-dev
-  image_url: https://github.com/gyuseok-dev.png
+Woongjo-Yoo:
+  name: Woongjo-Yoo
+  title: Back End Engineer
+  url: https://github.com/onikss793
+  image_url: https://github.com/onikss793.png
 
-shinyeong:
-  name: shinyeong
+Mengkki:
+  name: Mengkki
   title: Front End Engineer
-  url: https://github.com/bonbon0202
-  image_url: https://github.com/bonbon0202.png
+  url: https://github.com/guswnl0610
+  image_url: https://github.com/guswnl0610.png
 
 undefined:
   name: undefined
