--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -22,5 +22,12 @@ Mengkki:
   url: https://github.com/guswnl0610
   image_url: https://github.com/guswnl0610.png
 
+Danbi:
+  name: Danbi
+  title: Front End Engineer
+  url: https://github.com/itssweetrain
+  image_url: https://github.com/itssweetrain.png
+
+
 undefined:
   name: undefined
